--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    <div class="page"></div>
+    <div class="page">
     <header class="header">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
@@ -195,6 +195,7 @@
            </div>
         </section>
       </section>
+    </div>
     </footer>
   </body>
 </html>
