--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
-      <section class="descriptiom">
-        <div class="two-columns">
+      <section class="description">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
@@ -46,155 +46,155 @@
               применяются на примере обучения в Практикуме.
             </p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="digits">
-        <h1 class="section-title">Цифры и факты</h1>
-        <h2 class="section-subtitle">Про учёбу и мозг</h2>
+        <h3 class="section-title">Цифры и факты</h3>
+        <p class="section-subtitle">Про учёбу и мозг</p>
         <div class="table">
           <div class="table__cell">
-            <div class="table__heading">86 миллиардов</div>
-            <div class="table__text">Число нейронов в мозге человека</div>
+            <h3 class="table__heading">86 миллиардов<h3>
+            <p class="table__text">Число нейронов в мозге человека</dpv>
           </div>
           <div class="table__cell">
-            <div class="table__heading">2.1 миллиарда</div>
-            <div class="table__text">
+            <h3 class="table__heading">2.1 миллиарда</h3>
+            <p class="table__text">
               Число нуждающихся в повышении квалификации
-            </div>
-            <div class="table__text">Всемирный Банк, 2017</div>
+            </p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading">1000 терабайт</div>
-            <div class="table__text">Объём памяти человека</div>
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объём памяти человека</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading">500 триллионов</div>
-            <div class="table__text">
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">
               Число ответственных за обучение нервных синапсов у взрослого
               человека
-            </div>
+            </p>
           </div>
           <div class="table__cell">
-            <div class="table__heading">420 миллионов</div>
-            <div class="table__text">
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">
               Число взрослых людей моложе 25 лет, не имеющих образования для
               трудоустройства
-            </div>
-            <div class="table__text">Всемирный Банк, 2017</div>
+            </p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading">17–20 лет</div>
-            <div class="table__text">Пик обучаемости</div>
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading">1885 год</div>
-            <div class="table__text">Открытие кривой забывания</div>
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading">1889 год</div>
-            <div class="table__text">Открытие условного рефлекса</div>
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
         <section class="feynman">
           <h2 class="feynman__title">Метод Феймана</h2>
-          <h3 class="feynman__subtitle">Выучить и не забыть</h3>
+          <p class="feynman__subtitle">Выучить и не забыть</p>
           <a class="feynman__link" href="#">Подробнее &rarr;</a>
           <img class="feynman__image" src="./images/feynman.png" alt="Фейман" />
         </section>
         <section class="kaufman">
-          <h2 class="section-title_theme_dark">Принципы обучения</h2>
-          <h3 class="section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-          <div class="table__cell table__theme_dark">
-            <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark">1</div>
-              <div class="table__text_theme_dark">
+          <h2 class="section__title section-title_theme_dark">Принципы обучения</h2>
+          <p class="section__title section-subtitle_theme_dark">от Джоша Кауфмана</p>
+          <div class="table table__theme_dark">
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">1</h3>
+              <p class="table__text table__text_theme_dark">
                 Выберите привлекательный проект.
-              </div>
+              </p>
             </div>
-            <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark">2</div>
-              <div class="table__text_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">2</h3>
+              <p class="table__text table__text_theme_dark">
                 Сосредоточьтесь на каком-то одном навыке.
-              </div>
+              </p>
             </div>
-            <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark">3</div>
-              <div class="table__text_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">3</h3>
+              <p class="table__text table__text_theme_dark">
                 Определите целевой уровень мастерства.
-              </div>
+              </p>
             </div>
-            <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark">4</div>
-              <div class="table__text_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">4</h3>
+              <p class="table__text table__text_theme_dark">
                 Разбейте навык на элементы.
-              </div>
+              </p>
             </div>
-            <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark">5</div>
-              <div class="table__text_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">5</h3>
+              <p class="table__text table__text_theme_dark">
                 Приготовьте всё необходимое для занятий.
-              </div>
+              </p>
             </div>
-            <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark">6</div>
-              <div class="table__text_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">6</h3>
+              <p class="table__text table__text_theme_dark">
                 Устраните препятствия для занятий.
-              </div>
+              </p>
             </div>
-            <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark">7</div>
-              <div class="table__text_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">7</h3>
+              <p class="table__text table__text_theme_dark">
                 Выделите специальное время для занятий.
-              </div>
+              </p>
             </div>
-            <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark">8</div>
-              <div class="table__text_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">8</h3>
+              <p class="table__text table__text_theme_dark">
                 Создайте быстрые петли обратной связи.
-              </div>
+              </p>
             </div>
-            <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark">9</div>
-              <div class="table__text_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">9</h3>
+              <p class="table__text table__text_theme_dark">
                 Занимайтесь по расписанию, короткими интенсивными интервалами.
-              </div>
+              </p>
             </div>
-            <div class="table__cell_theme_dark">
-              <div class="table__heading_theme_dark">10</div>
-              <div class="table__text_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">10</h3>
+              <p class="table__text table__text_theme_dark">
                 Уделяйте внимание количеству и скорости.
-              </div>
+              </p>
             </div>
           </div>
           <div class="kaufman__triangle"></div>
         </section>
       </main>
     <footer class="footer">
-      <section class="footer__columns">
-        <section class="footer__column_content_copyright">
-          <div class="logo logo__place_footer"></div>
-          <div class="footer__author">&copy; Крылов Михаил</div>
-        </section>
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <p class="footer__author">&copy; Крылов Михаил</p>
+        </div>
 
-        <section class="footer__column_content_info">
-          <div class="footer__column-heading">О Практикуме</div>
-          <div class="footer__column-links">
+        <div class="footer__column footer__column_content_info">
+          <h3 class="footer__column-heading">О Практикуме</h3>
+          <nav class="footer__column-links">
             <a class="footer__column-link" href="#" >Главная</a>
             <a class="footer__column-link" href="#">Концепция</a>
             <a class="footer__column-link" href="#">Наставники</a>
-          </div>  
-        </section>
+          </nav>  
+        </div>
 
-        <section class="footer__column_content_social">
-          <div class="footer__column-heading">Соцсети</div>
+        <div class="footer__column footer__column_content_social">
+          <h3 class="footer__column-heading">Соцсети</h3>
           <div class="footer__column-links">
-            <a class="footer__column-link" href="#"><img class="icon-size" src="./images/tiktok-icon.svg" alt="Тикток" >Tiktok</a>
-            <a class="footer__column-link" href="#"><img class="icon-size" src="./images/vk_color_white.svg" alt="Вконтакте" >ВКонтакте</a>
-            <a class="footer__column-link" href="#"><img class="icon-size" src="./images/youtube-icon.svg" alt="Ютуб">Youtube</a>
+            <a class="footer__social-icon" href="#"><img class="icon-size" src="./images/tiktok-icon.svg" alt="Тикток" >Tiktok</a>
+            <a class="footer__social-icon" href="#"><img class="icon-size" src="./images/vk_color_white.svg" alt="Вконтакте" >ВКонтакте</a>
+            <a class="footer__social-icon" href="#"><img class="icon-size" src="./images/youtube-icon.svg" alt="Ютуб">Youtube</a>
            </div>
-        </section>
-      </section>
+        </div>
+      </div>
     </footer>
   </div>
   </body>
