--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
         <h2 class= "section-title">Видео на TED</h2> 
         <p class= "section-subtitle">Для тех кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="515px" height="316px" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen frameborder="0"></iframe>
-          <iframe class="video__iframe" width="515px" height="316px" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen frameborder="0"></iframe>
+          <iframe class="video__iframe"  src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+        </div>
       </section>
       <section class="oakley">
         <article class="two-columns">
@@ -114,8 +115,8 @@
           <p class="section-subtitle">Про учёбу и мозг</p>
           <div class="table">
             <div class="table__cell">
-              <h3 class="table__heading">86 миллиардов<h3>
-              <p class="table__text">Число нейронов в мозге человека</dpv>
+              <h3 class="table__heading">86 миллиардов</h3>
+              <p class="table__text">Число нейронов в мозге человека</p>
             </div>
             <div class="table__cell">
               <h3 class="table__heading">2.1 миллиарда</h3>
