--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
         </section>
 
         <section class="kaufman">
-          <h2 class="section__title section-title_theme_dark">Принципы обучения</h2>
-          <p class="section__title section-subtitle_theme_dark">от Джоша Кауфмана</p>
-          <div class="table table__theme_dark">
+          <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+          <p class="section-title section-subtitle_theme_dark">от Джоша Кауфмана</p>
+          <div class="table table_theme_dark">
             <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">1</h3>
               <p class="table__text table__text_theme_dark">
