--- a/index.html
+++ b/index.html
@@ -4,112 +4,160 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="./page/index.css">
+    <link rel="stylesheet" href="./page/index.css" />
   </head>
   <body>
-    <div class="page">
-    <header class="header">
-      <div class="logo logo_place_header"></div>
-      <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">
-        Какие совеременные и эффективные подходы к обучению вы можете
-        использовать в своей жизни?
-        <a href="#" class="header__link"> Узнать &rarr;</a>
-      </p>
-      <img
-        class="header__main-illustration"
-        src="./images/header-image.png"
-        alt="Тяжело в учении"
-      />
-      <div class="header__square-pic rotation"></div>
-    </header>
-    <main class="content">
-      <section class="description">
-        <article class="two-columns">
-          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
-          <div class="two-columns__main-text">
-            <p class="two-columns__paragraph">
-              Ни в школе, ни в институте нас не учат тому, как правильно изучать
-              материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся
-              решать однообразные задачи, чтобы лучше сдать тест, но часто в
-              итоге это не дает нам реального знания. Зубрежка быстро
-              выветривается и не приносит пользы.
-            </p>
-            <p class="two-columns__paragraph">
-              <span class="two-columns__span-accent">Вывод:</span> учиться тоже
-              нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-            </p>
-            <p class="two-columns__paragraph">
-              Конкретные техники и упражнения помогают изменить подход к
-              обучению, сделать его эффективным и захватывающим. Эти же техники
-              применяются на примере обучения в Практикуме.
-            </p>
-          </div>
-        </article>
-      </section>
-      <section class="techniques">
-        <h2 class="section-title">Техники обучения</h2>
-        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
-        <div class="cards">
-          <div class="cards__item">
-            <img class="cards__image" src="./images/cards-attention.png" alt="Книга в руках">
-            <h3 class="cards__title">Два вида внимания</h3>
-            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
-          </div>
+    <div class="root">
+      <header class="header">
+        <div class="logo logo_place_header"></div>
+        <h1 class="header__title">Научиться учиться</h1>
+        <p class="header__subtitle">
+          Какие совеременные и эффективные подходы к обучению вы можете
+          использовать в своей жизни?
+          <a href="#" class="header__link"> Узнать &rarr;</a>
+        </p>
+        <img
+          class="header__main-illustration"
+          src="./images/header-image.png"
+          alt="Тяжело в учении"
+        />
+        <div class="header__square-pic rotation"></div>
+      </header>
+      <main class="content">
+        <section class="description">
+          <article class="two-columns">
+            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">
+                Ни в школе, ни в институте нас не учат тому, как правильно
+                изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
+                тренируемся решать однообразные задачи, чтобы лучше сдать тест,
+                но часто в итоге это не дает нам реального знания. Зубрежка
+                быстро выветривается и не приносит пользы.
+              </p>
+              <p class="two-columns__paragraph">
+                <span class="two-columns__span-accent">Вывод:</span> учиться
+                тоже нужно уметь, но почему-то этому мало где учат. Что с этим
+                делать?
+              </p>
+              <p class="two-columns__paragraph">
+                Конкретные техники и упражнения помогают изменить подход к
+                обучению, сделать его эффективным и захватывающим. Эти же
+                техники применяются на примере обучения в Практикуме.
+              </p>
+            </div>
+          </article>
+        </section>
+        <section class="techniques">
+          <h2 class="section-title">Техники обучения</h2>
+          <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+          <div class="cards">
+            <div class="cards__item">
+              <img
+                class="cards__image"
+                src="./images/cards-attention.png"
+                alt="Книга в руках"
+              />
+              <h3 class="cards__title">Два вида внимания</h3>
+              <p class="cards__description">
+                Глубокие знания возникают, если чередовать сфокусированное и
+                рассеянное мышление.
+              </p>
+            </div>
 
-          <div class="cards__item">
-            <img class="cards__image" src="./images/cards-recall.png" alt="Скульптура мальчика">
-            <h3 class="cards__title">Recall</h3>
-            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти</p>
-          </div>
+            <div class="cards__item">
+              <img
+                class="cards__image"
+                src="./images/cards-recall.png"
+                alt="Скульптура мальчика"
+              />
+              <h3 class="cards__title">Recall</h3>
+              <p class="cards__description">
+                Вспоминайте изученное — это позволит соединить разрозненные
+                порции памяти
+              </p>
+            </div>
 
-          <div class="cards__item">
-            <img class="cards__image" src="./images/cards-interliving.png" alt="Вид сверху">
-            <h3 class="cards__title">Интерливинг</h3>
-            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
-          </div>
+            <div class="cards__item">
+              <img
+                class="cards__image"
+                src="./images/cards-interliving.png"
+                alt="Вид сверху"
+              />
+              <h3 class="cards__title">Интерливинг</h3>
+              <p class="cards__description">
+                Изучайте несколько навыков одновременно, они обогащают друг
+                друга.
+              </p>
+            </div>
 
-          <div class="cards__item">
-            <img class="cards__image" src="./images/cards-question.png" alt="Мжучина в комнате">
-            <h3 class="cards__title">Вопросы</h3>
-            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
-          </div>
+            <div class="cards__item">
+              <img
+                class="cards__image"
+                src="./images/cards-question.png"
+                alt="Мжучина в комнате"
+              />
+              <h3 class="cards__title">Вопросы</h3>
+              <p class="cards__description">
+                Слушая преподавателя, придумывайте хороший вопрос, который вас
+                действительно волнует.
+              </p>
+            </div>
 
-          <div class="cards__item">
-            <img class="cards__image" src="./images/cards-competence.png" alt="Стопка книг в руке">
-            <h3 class="cards__title">Иллюзия компетентности</h3>
-            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+            <div class="cards__item">
+              <img
+                class="cards__image"
+                src="./images/cards-competence.png"
+                alt="Стопка книг в руке"
+              />
+              <h3 class="cards__title">Иллюзия компетентности</h3>
+              <p class="cards__description">
+                Повторите про себя, запишите, расскажите другу: вам только
+                кажется, что вы владеете новой темой.
+              </p>
+            </div>
           </div>
-        </div>
-      </section>
-      <section class="video">
-        <h2 class= "section-title">Видео на TED</h2> 
-        <p class= "section-subtitle">Для тех кто любит прокрастинировать</p>
-        <div class="video__iframes">
-          <iframe class="video__iframe"  src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
-        </div>
-      </section>
-      <section class="oakley">
-        <article class="two-columns">
-          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
-          <div class="two-columns__main-text">
-            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным.
-               В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. 
-               Но для продвижения по службе нужно было сдавать математику. 
-               И тогда Барбара придумала свой подход к точным наукам. 
-               Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
-            </p>
+        </section>
+        <section class="video">
+          <h2 class="section-title">Видео на TED</h2>
+          <p class="section-subtitle">Для тех кто любит прокрастинировать</p>
+          <div class="video__iframes">
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/embed/5MgBikgcWnY"
+              allowfullscreen
+            ></iframe>
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/embed/arj7oStGLkU"
+              allowfullscreen
+            ></iframe>
           </div>
-        </article>
-      </section>
-             <section class="feynman">
+        </section>
+        <section class="oakley">
+          <article class="two-columns">
+            <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">
+                С детства Барбаре не давалась математика. Она считала себя
+                законченным гуманитарием, причём далеко не самым умным. В армии
+                она изучала русский язык, чтобы получить надбавку, да так
+                успешно, что её выдвинули в командиры. Но для продвижения по
+                службе нужно было сдавать математику. И тогда Барбара придумала
+                свой подход к точным наукам. Оказалось, если вам что-то «плохо
+                даётся», ваши добытые трудом знания гораздо глубже, чем у тех,
+                кому всё ясно с первого взгляда.
+              </p>
+            </div>
+          </article>
+        </section>
+        <section class="feynman">
           <h2 class="feynman__title">Метод Феймана</h2>
           <p class="feynman__subtitle">Выучить и не забыть</p>
           <a class="feynman__link" href="#">Подробнее &rarr;</a>
           <img class="feynman__image" src="./images/feynman.png" alt="Фейман" />
         </section>
-       
+
         <section class="digits">
           <h3 class="section-title">Цифры и факты</h3>
           <p class="section-subtitle">Про учёбу и мозг</p>
@@ -160,22 +208,36 @@
         </section>
 
         <section class="khan">
-          <div class ="khan__container">
-            <p class ="khan__author">Салман Хан</p>
-            <h2 class ="khan__title">Весь мир — школа</h2>
-            <p class = "khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
-            <p class = "khan__quote-author">Джордж Лукас</p>
-            <p class = "khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__container">
+            <p class="khan__author">Салман Хан</p>
+            <h2 class="khan__title">Весь мир — школа</h2>
+            <p class="khan__quote">
+              Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+              студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
+              всем, кто занимается образованием — так учащиеся повсюду смогут
+              получить навыки и знания, которые приносят успех в школе, карьере
+              и жизни.
+            </p>
+            <p class="khan__quote-author">Джордж Лукас</p>
+            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
-              <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Книга Хана" >
+              <img
+                class="khan__book-pic"
+                src="./images/khan-book.jpg"
+                alt="Книга Хана"
+              />
               <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
-            </div>    
+            </div>
           </div>
         </section>
 
         <section class="kaufman">
-          <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-          <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+          <h2 class="section-title section-title_theme_dark">
+            Принципы обучения
+          </h2>
+          <p class="section-subtitle section-subtitle_theme_dark">
+            от Джоша Кауфмана
+          </p>
           <div class="table table_theme_dark">
             <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -242,40 +304,80 @@
         </section>
         <section class="resources">
           <h2 class="section-title">Полезные ресурсы</h2>
-          <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+          <p class="section-subtitle">
+            Больше материалов о техниках и лайфхаках обучения
+          </p>
           <div class="resources__logo-zone">
-            <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Арзамас"></a>
-            <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Н1"></a>
-            <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Полка"></a>
-            <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Стрелка"></a>
+            <a class="resources__link" href="#"
+              ><img
+                class="resources__logo"
+                src="./images/logo/resources-arzamas.svg"
+                alt="Арзамас"
+            /></a>
+            <a class="resources__link" href="#"
+              ><img
+                class="resources__logo"
+                src="./images/logo/resources-n1.svg"
+                alt="Н1"
+            /></a>
+            <a class="resources__link" href="#"
+              ><img
+                class="resources__logo"
+                src="./images/logo/resources-polka.svg"
+                alt="Полка"
+            /></a>
+            <a class="resources__link" href="#"
+              ><img
+                class="resources__logo"
+                src="./images/logo/resources-strelka.svg"
+                alt="Стрелка"
+            /></a>
           </div>
         </section>
       </main>
-    <footer class="footer">
-      <div class="footer__columns">
-        <div class="footer__column footer__column_content_copyright">
-          <div class="logo logo_place_footer"></div>
-          <p class="footer__author">&copy; Крылов Михаил</p>
-        </div>
-        <div class="footer__column footer__column_content_info">
-          <h3 class="footer__column-heading">О Практикуме</h3>
-          <nav class="footer__column-links">
-            <a class="footer__column-link" href="#" >Главная</a>
-            <a class="footer__column-link" href="#">Концепция</a>
-            <a class="footer__column-link" href="#">Наставники</a>
-          </nav>  
-        </div>
+      <footer class="footer">
+        <div class="footer__columns">
+          <div class="footer__column footer__column_content_copyright">
+            <div class="logo logo_place_footer"></div>
+            <p class="footer__author">&copy; Крылов Михаил</p>
+          </div>
+          <div class="footer__column footer__column_content_info">
+            <h3 class="footer__column-heading">О Практикуме</h3>
+            <nav class="footer__column-links">
+              <a class="footer__column-link" href="#">Главная</a>
+              <a class="footer__column-link" href="#">Концепция</a>
+              <a class="footer__column-link" href="#">Наставники</a>
+            </nav>
+          </div>
 
-        <div class="footer__column footer__column_content_social">
-          <h3 class="footer__column-heading">Соцсети</h3>
-          <div class="footer__column-links">
-            <a class="footer__social-icon" href="#"><img class="footer__icon-size" src="./images/tiktok-icon.svg" alt="Тикток" >Tiktok</a>
-            <a class="footer__social-icon" href="#"><img class="footer__icon-size" src="./images/vk_color_white.svg" alt="Вконтакте" >ВКонтакте</a>
-            <a class="footer__social-icon" href="#"><img class="footer__icon-size" src="./images/youtube-icon.svg" alt="Ютуб">Youtube</a>
-           </div>
+          <div class="footer__column footer__column_content_social">
+            <h3 class="footer__column-heading">Соцсети</h3>
+            <div class="footer__column-links">
+              <a class="footer__column-link" href="#"
+                ><img
+                  class="footer__social-icon"
+                  src="./images/tiktok-icon.svg"
+                  alt="Тикток"
+                />Tiktok</a
+              >
+              <a class="footer__column-link" href="#"
+                ><img
+                  class="footer__social-icon"
+                  src="./images/vk_color_white.svg"
+                  alt="Вконтакте"
+                />ВКонтакте</a
+              >
+              <a class="footer__column-link" href="#"
+                ><img
+                  class="footer__social-icon"
+                  src="./images/youtube-icon.svg"
+                  alt="Ютуб"
+                />Youtube</a
+              >
+            </div>
+          </div>
         </div>
-      </div>
-    </footer>
-  </div>
+      </footer>
+    </div>
   </body>
 </html>
